# llm-samples

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
docs/: api.md
docs/plans/: 2026-03-11-matmul-operator-design.md  2026-03-11-matmul-operator-implementation.md  2026-03-12-fastapi-matmul-implementation.md  2026-03-12-fastapi-matmul-service-design.md
examples/: basic_usage.py
src/matmul_ops/: __init__.py
src/matmul_ops/api/: main.py  models.py  routes.py
src/matmul_ops/ops/: __init__.py  base.py  matmul.py  registry.py
src/matmul_ops/utils/: __init__.py  validators.py
tests/: test_api_models.py  test_api_routes.py  test_matmul_op.py  test_registry.py  test_validators.py
