[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "matmul_ops"
version = "0.1.0"
description = "A PyTorch custom matrix multiplication operator library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "numpy",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]